--- a/YourTube/package.json
+++ b/YourTube/package.json
@@ -6,21 +6,46 @@
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.2.3",
+    "autoprefixer": "^9.4.7",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.0",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "node-sass": "^4.11.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.3",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.1",
+    "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' --ignore 'static' ",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack",
+    "tunnel": "lt --port 8000"
   },
   "devDependencies": {
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "nodemon": "^1.18.9"
   }
 }
